[package]
name = "scoped-gc-derive"
version = "0.1.5"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Scoped garbage collection for Rust"
repository = "https://github.com/open-flash/rust-scoped-gc"
readme = "../README.md"
license = "AGPL-3.0"

[lib]
name = "scoped_gc_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "^0.2.3"
quote = "^0.4.2"
syn = "^0.12.14"
synstructure = "^0.7.0"
