[package]
name = "scoped-gc"
version = "0.1.5"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Derive plugin for the `scoped-gc` crate"
repository = "https://github.com/open-flash/rust-scoped-gc"
readme = "../README.md"
license = "AGPL-3.0"

[lib]
name = "scoped_gc"
path = "src/lib.rs"
